--- a/etc/operator/config/crd/clairs.clairproject.org.yaml
+++ b/etc/operator/config/crd/clairs.clairproject.org.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: clairs.projectclair.io
+  name: clairs.clairproject.org
 spec:
-  group: projectclair.io
+  group: clairproject.org
   names:
     categories:
     - apps
@@ -122,13 +122,20 @@ spec:
                       type: object
                   type: object
                 type: array
-              endpoint:
+              gateway:
                 description: |-
-                  Endpoint indicates how the Ingress should be created.
+                  Gateway indicates how the Gateway should be created.
 
-                  If unspecified, the resulting endpoint will need to be read out of the status subresource.
+                  If unspecified, services will need to have their routing set up manually.
                 nullable: true
                 properties:
+                  gatewayClassName:
+                    description: |-
+                      Gateway_class_name is the GatewayClass to use.
+
+                      If not provided, one will be guessed at.
+                    nullable: true
+                    type: string
                   hostname:
                     description: Hostname indicates the desired hostname.
                     nullable: true
@@ -140,6 +147,8 @@ spec:
                       name:
                         description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                         type: string
+                    required:
+                    - name
                     type: object
                 type: object
               image:
@@ -246,6 +255,10 @@ spec:
                 required:
                 - root
                 type: object
+              currentVersion:
+                description: Current_version is the current verison of a deployed Clair instance.
+                nullable: true
+                type: string
               endpoint:
                 description: Endpoint is a reference to whatever object is providing ingress.
                 nullable: true
@@ -314,6 +327,10 @@ spec:
                 - kind
                 - name
                 type: object
+              previousVersion:
+                description: Previous_version is the previous verison of a deployed Clair instance, if any.
+                nullable: true
+                type: string
               refs:
                 description: Refs holds on to references to objects needed by this instance.
                 items:
