--- a/etc/operator/config/crd/kustomization.yaml
+++ b/etc/operator/config/crd/kustomization.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- clairs.projectclair.io.yaml
-- indexers.projectclair.io.yaml
-- matchers.projectclair.io.yaml
-- notifiers.projectclair.io.yaml
+- clairs.clairproject.org.yaml
+- indexers.clairproject.org.yaml
+- matchers.clairproject.org.yaml
+- notifiers.clairproject.org.yaml
 # Updaters not ready for the operator yet.
-#- updaters.projectclair.io.yaml
+#- updaters.clairproject.org.yaml
 patches:
 - target:
     group: apiextensions.k8s.io
@@ -28,17 +28,17 @@ patches:
     group: apiextensions.k8s.io
     version: v1
     kind: CustomResourceDefinition
-    name: clairs.projectclair.io
+    name: clairs.clairproject.org
   path: patches/fixups_clairs.yaml
 - target:
     group: apiextensions.k8s.io
     version: v1
     kind: CustomResourceDefinition
-    name: (index|match|notifi)ers.projectclair.io
+    name: (index|match|notifi)ers.clairproject.org
   path: patches/fixups_subresources.yaml
 #- target:
 #    group: apiextensions.k8s.io
 #    version: v1
 #    kind: CustomResourceDefinition
-#    name: clairs.projectclair.io
+#    name: clairs.clairproject.org
 #  path: patches/fixups_updaters.yaml
