--- a/etc/operator/config/crd/notifiers.clairproject.org.yaml
+++ b/etc/operator/config/crd/notifiers.clairproject.org.yaml
@@ -1,37 +1,26 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: updaters.projectclair.io
+  name: notifiers.clairproject.org
 spec:
-  group: projectclair.io
+  group: clairproject.org
   names:
     categories: []
-    kind: Updater
-    plural: updaters
+    kind: Notifier
+    plural: notifiers
     shortNames:
-    - updater
-    singular: updater
+    - notifier
+    singular: notifier
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .spec.suspend
-      name: Suspended
-      type: boolean
-    - format: date-time
-      jsonPath: .status.cronJob.status.last_successful_time
-      name: Last Success
-      type: date
-    - format: date-time
-      jsonPath: .status.cronJob.status.last_schedule_time
-      name: Last Schedule
-      type: date
+  - additionalPrinterColumns: []
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Auto-generated derived type for UpdaterSpec via `CustomResource`
+        description: Auto-generated derived type for NotifierSpec via `CustomResource`
         properties:
           spec:
-            description: UpdaterSpec describes the desired state of an Updater instance.
+            description: NotifierSpec describes the desired state of an Notifier instance.
             properties:
               config:
                 description: Config is configuration sources for the Clair instance.
@@ -92,20 +81,9 @@ spec:
                 description: Image is the image that should be used in the managed deployment.
                 nullable: true
                 type: string
-              schedule:
-                description: |-
-                  Update schedule in Cron format, see <https://en.wikipedia.org/wiki/Cron>.
-
-                  If not provided, a sensible default will be used.
-                nullable: true
-                type: string
-              suspend:
-                description: Suspend subsequent runs.
-                nullable: true
-                type: boolean
             type: object
           status:
-            description: UpdaterStatus describes the observed state of a Updater instance.
+            description: WorkerStatus describes the observed state of a worker instance.
             nullable: true
             properties:
               conditions:
@@ -141,78 +119,10 @@ spec:
                   - type
                   type: object
                 type: array
-              config:
-                description: Config is configuration sources for the Clair instance.
+              dropin:
+                description: Dropin is a generated JSON dropin configuration that a Clair instance may use to construct its configuration.
                 nullable: true
-                properties:
-                  dropins:
-                    description: Dropins is a list of references to drop-in configs.
-                    items:
-                      description: DropinSource represents a source for the value of a Clair configuration dropin.
-                      properties:
-                        configMapKeyRef:
-                          description: Selects a key of a ConfigMap.
-                          nullable: true
-                          properties:
-                            key:
-                              description: The key to select.
-                              type: string
-                            name:
-                              description: The name of the referent.
-                              type: string
-                          required:
-                          - key
-                          - name
-                          type: object
-                        secretKeyRef:
-                          description: Selects a key of a Secret.
-                          nullable: true
-                          properties:
-                            key:
-                              description: The key to select.
-                              type: string
-                            name:
-                              description: The name of the referent.
-                              type: string
-                          required:
-                          - key
-                          - name
-                          type: object
-                      type: object
-                    type: array
-                  root:
-                    description: Root is a reference to the main config.
-                    properties:
-                      key:
-                        description: The key to select.
-                        type: string
-                      name:
-                        description: The name of the referent.
-                        type: string
-                    required:
-                    - key
-                    - name
-                    type: object
-                required:
-                - root
-                type: object
-              cronJob:
-                description: CronJob the operator has configured for this Updater.
-                nullable: true
-                properties:
-                  apiGroup:
-                    description: APIGroup is the group for the resource being referenced. If APIGroup is not specified, the specified Kind must be in the core API group. For any other third-party types, APIGroup is required.
-                    type: string
-                  kind:
-                    description: Kind is the type of resource being referenced
-                    type: string
-                  name:
-                    description: Name is the name of resource being referenced
-                    type: string
-                required:
-                - kind
-                - name
-                type: object
+                type: string
               refs:
                 description: Refs holds on to references to objects needed by this instance.
                 items:
@@ -235,7 +145,7 @@ spec:
             type: object
         required:
         - spec
-        title: Updater
+        title: Notifier
         type: object
     served: true
     storage: true
