--- a/etc/operator/config/crd/patches/cainjection_in_matchers.yaml
+++ b/etc/operator/config/crd/patches/cainjection_in_matchers.yaml
@@ -2,6 +2,6 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: matchers.projectclair.io
+  name: matchers.clairproject.org
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
