--- a/etc/operator/config/rbac/clair_viewer_role.yaml
+++ b/etc/operator/config/rbac/clair_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: clair-viewer-role
 rules:
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - clairs
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - clairs/status
   verbs:
