--- a/etc/operator/config/rbac/indexer_editor_role.yaml
+++ b/etc/operator/config/rbac/indexer_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: indexer-editor-role
 rules:
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - indexers
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - indexers/status
   verbs:
