--- a/etc/operator/config/rbac/indexer_viewer_role.yaml
+++ b/etc/operator/config/rbac/indexer_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: indexer-viewer-role
 rules:
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - indexers
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - indexers/status
   verbs:
