--- a/etc/operator/config/rbac/role.yaml
+++ b/etc/operator/config/rbac/role.yaml
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - clairs
   - indexers
@@ -33,7 +33,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - clairs/finalizers
   - indexers/finalizers
@@ -43,7 +43,7 @@ rules:
   verbs:
   - update
 - apiGroups:
-  - projectclair.io
+  - clairproject.org
   resources:
   - clairs/status
   - indexers/status
