--- a/etc/operator/config/webhook/service.yaml
+++ b/etc/operator/config/webhook/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webhook-projectclair-io
+  name: webhook-clairproject-org
   namespace: system
 spec:
   ports:
