--- a/etc/operator/config/webhook/validating.yaml
+++ b/etc/operator/config/webhook/validating.yaml
@@ -2,9 +2,9 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: validate.projectclair.io
+  name: validate.clairproject.org
 webhooks:
-- name: v1alpha1.validate.projectclair.io
+- name: v1alpha1.validate.clairproject.org
   matchPolicy: Equivalent
   sideEffects: None
   failurePolicy: Fail
@@ -13,7 +13,7 @@ webhooks:
   - operations:
     - CREATE
     - UPDATE
-    apiGroups: [projectclair.io]
+    apiGroups: [clairproject.org]
     apiVersions: [v1alpha1]
     resources:
     - clairs
@@ -24,6 +24,6 @@ webhooks:
     scope: Namespaced
   clientConfig:
     service:
-      name: webhook-projectclair-io
+      name: webhook-clairproject-org
       namespace: system
       path: /validate/v1alpha1
