--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -4,6 +4,7 @@ license.workspace = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
+publish.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,11 +12,10 @@ authors.workspace = true
 api = { path = "../api" }
 kube = { workspace = true }
 json-patch = { workspace = true }
-k8s-openapi = { workspace = true, features = ["v1_25"] }
+k8s-openapi = { workspace = true, features = ["earliest", "schemars"] }
 clap = { workspace = true }
 serde_yaml = { workspace = true }
 serde_json = { workspace = true }
-signal-hook = "0.3.15"
-xshell = "0.2.3"
-scopeguard = "1.1.0"
-lazy_static = "1.4.0"
+signal-hook = "0.3"
+xshell = "0.2"
+scopeguard = "1"
