fixup! clair_config: update

--- a/clair_config/Cargo.toml
+++ b/clair_config/Cargo.toml
@@ -4,6 +4,7 @@ license.workspace = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
+publish.workspace = true
 
 [dependencies]
 api = { path = "../api" }
