controller: lots of stuff
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "controller"
-license.workspace = true
-version.workspace = true
-edition.workspace = true
 authors.workspace = true
+edition.workspace = true
+license.workspace = true
+publish.workspace = true
+rust-version.workspace = true
+version.workspace = true
+
+[lints]
+workspace = true
 
 [features]
 default = []
@@ -12,36 +17,55 @@ test_ci = []
 [dependencies]
 api = { path = "../api" }
 clair_config = { path = "../clair_config" }
-webhook = { path = "../webhook" }
 
-clap = { workspace = true }
-futures =  { workspace = true }
-hyper =  { workspace = true }
-json-patch = { workspace = true }
-k8s-openapi = { workspace = true, features = ["v1_25"] }
-kube = { workspace = true }
-metrics =  { workspace = true }
-serde_json = { workspace = true }
-serde = { workspace = true }
-serde_yaml = { workspace = true }
-tokio = { workspace = true }
-tokio-stream = { workspace = true }
-tracing =  { workspace = true }
+clap.workspace = true
+futures.workspace = true
+json-patch.workspace = true
+metrics.workspace = true
+serde_json.workspace = true
+serde.workspace = true
+serde_yaml.workspace = true
+tokio.workspace = true
+tokio-stream.workspace = true
+tracing.workspace = true
 
-anyhow = "1.0.71"
-bytes = "1.4.0"
-chrono = { version = "0.4.26", features = ["clock", "serde"], default-features = false }
-iftree = "1.0.4"
-is-terminal = "0.4.7"
-lazy_static = "1.4.0"
-metrics-exporter-prometheus = "0.12.1"
-thiserror = "1.0.40"
-tokio-native-tls = "0.3.1"
-tokio-util = { version = "0.7.8" }
-tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
-axum = { version = "0.6.18", features = ["http1", "json", "tracing"] }
-regex = "1.8.4"
+anyhow = "1"
+bytes = "1"
+gateway-api = "0.15"
+is-terminal = "0.4"
+openssl = "0.10"
+regex = "1"
+thiserror = "2"
+tokio-native-tls = "0.3"
+
+metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
+axum = { version = "0.8", features = ["http1", "json", "tracing"] }
+axum-server = { version = "0.7", features = ["tls-openssl"] }
+chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
+phf = { version = "0.11", features = ["macros"] }
+tokio-util = { version = "0.7" }
+tower-http = { version = "0.6", features = ["trace"] }
+tracing-opentelemetry = { version = "0.30", features = ["metrics"] }
+tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
+
+[dependencies.k8s-openapi]
+workspace = true
+features = ["earliest"]
+
+[dependencies.kube]
+workspace = true
+features = ["runtime", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"]
 
 [dev-dependencies]
-reqwest = { version = "0.11.18", features = ["json"] }
-test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
+assert-json-diff = "2"
+jsonpath-rust = "1"
+tower = "0.5"
+
+[dev-dependencies.reqwest]
+version = "0.12"
+features = ["json"]
+
+[dev-dependencies.test-log]
+version = "0.2"
+default-features = false
+features = ["trace"]
