--- a/clippy.toml
+++ b/clippy.toml
@@ -1,1 +1,7 @@
-msrv = "1.66.1"
+msrv = "1.83"
+allow-dbg-in-tests = true
+allow-expect-in-tests = true
+allow-indexing-slicing-in-tests = true
+allow-panic-in-tests = true
+allow-print-in-tests = true
+allow-unwrap-in-tests = true
