--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,8 @@ jobs:
         # By default actions/checkout checks out a merge commit. Check out the PR head instead.
         # https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
         ref: ${{ github.event.pull_request.head.sha }}
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
+    - run: |
+        rustup update stable && rustup default stable
     - uses: actions/cache@v3
       with:
         path: |
@@ -37,11 +35,12 @@ jobs:
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Install nextest
-      uses: taiki-e/install-action@nextest
+      run: |
+        which cargo-nextest || cargo install --locked cargo-nextest
     - name: Build and archive tests
       run: cargo nextest archive -F test_ci --archive-file tests.tar.zst
     - name: Upload archive to workflow
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: nextest-archive
         path: tests.tar.zst
@@ -60,10 +59,8 @@ jobs:
         # By default actions/checkout checks out a merge commit. Check out the PR head instead.
         # https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
         ref: ${{ github.event.pull_request.head.sha }}
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
+    - run: |
+        rustup update stable && rustup default stable
     - uses: actions/cache@v3
       with:
         path: |
@@ -74,10 +71,10 @@ jobs:
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Install nextest
-      uses: taiki-e/install-action@nextest
-    - run: mkdir -p ~/.cargo/bin
+      run: |
+        which cargo-nextest || cargo install --locked cargo-nextest
     - name: Download archive
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: nextest-archive
     - name: Run tests
