--- a/etc/operator/config/crd/indexers.clairproject.org.yaml
+++ b/etc/operator/config/crd/indexers.clairproject.org.yaml
@@ -24,7 +24,6 @@ spec:
             properties:
               config:
                 description: Config is configuration sources for the Clair instance.
-                nullable: true
                 properties:
                   dropins:
                     description: Dropins is a list of references to drop-in configs.
@@ -45,6 +44,9 @@ spec:
                           - key
                           - name
                           type: object
+                          x-kubernetes-validations:
+                          - message: '"key" and "name" must be populated'
+                            rule: self.name != '' && self.key != ''
                         secretKeyRef:
                           description: Selects a key of a Secret.
                           nullable: true
@@ -59,7 +61,13 @@ spec:
                           - key
                           - name
                           type: object
+                          x-kubernetes-validations:
+                          - message: '"key" and "name" must be populated'
+                            rule: self.name != '' && self.key != ''
                       type: object
+                      x-kubernetes-validations:
+                      - message: exactly one key ref must be provided
+                        rule: (has(self.configMapKeyRef) && !has(self.secretKeyRef)) || (!has(self.configMapKeyRef) && has(self.secretKeyRef))
                     type: array
                   root:
                     description: Root is a reference to the main config.
@@ -74,14 +82,21 @@ spec:
                     - key
                     - name
                     type: object
+                    x-kubernetes-validations:
+                    - message: '"key" and "name" must be populated'
+                      rule: self.name != '' && self.key != ''
                 required:
                 - root
                 type: object
+                x-kubernetes-validations: []
               image:
                 description: Image is the image that should be used in the managed deployment.
                 nullable: true
                 type: string
+            required:
+            - config
             type: object
+            x-kubernetes-validations: []
           status:
             description: WorkerStatus describes the observed state of a worker instance.
             nullable: true
@@ -97,19 +112,30 @@ spec:
                       type: string
                     message:
                       description: message is a human readable message indicating details about the transition. This may be an empty string.
+                      maxLength: 32768
                       type: string
                     observedGeneration:
                       description: observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.
                       format: int64
+                      minimum: 0.0
                       type: integer
                     reason:
                       description: reason contains a programmatic identifier indicating the reason for the condition's last transition. Producers of specific condition types may define expected values and meanings for this field, and whether the values are considered a guaranteed API. The value should be a CamelCase string. This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
                       type: string
                     status:
                       description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - 'True'
+                      - 'False'
+                      - Unknown
                       type: string
                     type:
                       description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                       type: string
                   required:
                   - lastTransitionTime
@@ -119,6 +145,9 @@ spec:
                   - type
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - type
+                x-kubernetes-list-type: map
               dropin:
                 description: Dropin is a generated JSON dropin configuration that a Clair instance may use to construct its configuration.
                 nullable: true
@@ -142,7 +171,11 @@ spec:
                   - name
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - kind
+                x-kubernetes-list-type: map
             type: object
+            x-kubernetes-validations: []
         required:
         - spec
         title: Indexer
