--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -4,12 +4,22 @@ license.workspace = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
+publish.workspace = true
 
 [dependencies]
-k8s-openapi = { workspace = true }
-kube = { workspace = true, features = ["derive" ] }
-serde_json = { workspace = true }
-serde = { workspace = true }
+schemars.workspace = true
+serde_json.workspace = true
+serde.workspace = true
 
-schemars = { version = "0.8", features = ["chrono"] }
-validator = { version = "0.20", features = ["derive"] }
+[dependencies.kube]
+version = "0.99"
+default-features = false
+features = ["derive"]
+
+[dependencies.k8s-openapi]
+workspace = true
+features = ["schemars"]
+
+[dependencies.validator]
+version = "0.20"
+features = ["derive"]
