--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -10,12 +10,18 @@ publish.workspace = true
 
 [dependencies]
 api = { path = "../api" }
-kube = { workspace = true }
-json-patch = { workspace = true }
-k8s-openapi = { workspace = true, features = ["earliest", "schemars"] }
-clap = { workspace = true }
-serde_yaml = { workspace = true }
-serde_json = { workspace = true }
+
+clap.workspace = true
+json-patch.workspace = true
+schemars.workspace = true
+serde_json.workspace = true
+serde.workspace = true
+serde_yaml.workspace = true
+
+scopeguard = "1"
 signal-hook = "0.3"
 xshell = "0.2"
-scopeguard = "1"
+
+[dependencies.k8s-openapi]
+workspace = true
+features = ["earliest", "schemars"]
